--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<strong>WHAT DO WE DO ?</strong>
 							</h2>
 							<p class="intro-text">
-								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. 
+								Welcome to our website! The ECE GSA is committed to fostering community within the student body and promoting the interests and well-being of ECE graduate students.As an organization both comprised of students and invested in supporting students, we consistently host lively and engaging social and professional events throughout the year. You can find some of our past and upcoming events featured on this site. In the meantime, you can join our Slack channel, where we will post announcements and keep you updated. We look forward to seeing you at our next function!	 
 							</p>
 						</div> <!-- end col -->
 
