--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 										<h5 class="team-title mb-10">Alejandro Quevedo</h5>
 										<!-- <span>Organizer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="https://www.instagram.com/dro__bro", target="_blank"><i class="fa fa-instagram"></i></a>
 											<a href="mailto:alejandromquevedo@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
@@ -319,7 +319,7 @@
 										<h5 class="team-title mb-10">Jennifer Volk</h5>
 										<!-- <span>Organizer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="#", target="_blank" ><i class="fa fa-instagram"></i></a>
 											<a href="mailto:jevolk@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
@@ -336,7 +336,7 @@
 										<h5 class="team-title mb-10">Madeline Blischke</h5>
 										<!-- <span>Organizer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="#", target="_blank"><i class="fa fa-instagram"></i></a>
 											<a href="mailto:blischke@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
@@ -353,7 +353,7 @@
 										<h5 class="team-title mb-10">Monsij Biswal</h5>
 										<!-- <span>Lead Designer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="https://www.instagram.com/monsij.b", target="_blank"><i class="fa fa-instagram"></i></a>
 											<a href="mailto:mbiswal@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
@@ -373,7 +373,7 @@
 										<h5 class="team-title mb-10">Ozgur Guldogan</h5>
 										<!-- <span>Organizer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="#", target="_blank"><i class="fa fa-instagram"></i></a>
 											<a href="mailto:ozgurguldogan@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
@@ -391,7 +391,7 @@
 										<h5 class="team-title mb-10">Sean Anderson</h5>
 										<!-- <span>Organizer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="#", target="_blank"><i class="fa fa-instagram"></i></a>
 											<a href="mailto:seananderson@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
@@ -407,7 +407,7 @@
 										<h5 class="team-title mb-10">Vade Shah</h5>
 										<!-- <span>Lead Designer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="https://www.instagram.com/vadeshah", target="_blank"><i class="fa fa-instagram"></i></a>
 											<a href="mailto:vade@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
@@ -425,7 +425,7 @@
 										<h5 class="team-title mb-10">Zeki Duman</h5>
 										<!-- <span>Lead Designer</span> -->
 										<div class="socials mt-20">
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="https://www.instagram.com/dumanzeki", target="_blank"><i class="fa fa-instagram"></i></a>
 											<a href="mailto:zekiduman@ucsb.edu"><i class="fa fa-envelope"></i></a>
 										</div>
 									</div>
